--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,16 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.js"
+      "dest": "/index.js",
+      "methods": [
+        "POST",
+        "GET",
+        "PUT",
+        "DELETE"
+      ],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ],
   "env": {
