--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "version": 2,
+  "name": "oporfinApi",
+  "version": 1,
   "builds": [
     {
       "src": "index.js",
@@ -22,7 +23,7 @@
     }
   ],
   "env": {
-    "DB_USER": "lara",
+    "DB_USER": "@db_user",
     "DB_PASS": "@db_pass",
     "DB_HOST": "@db_host",
     "DB_NAME": "@db_name",
