--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "DEBUG=app:* nodemon index",
-    "start": "NODE_ENV=production node index",
-    "build": "oporfin-api build"
+    "start": "NODE_ENV=production node index"
   },
   "keywords": [],
   "author": "",
