--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ENV=dev nodemon --ignore 'node_modules/**' index.js",
+    "dev": "DEBUG=app:* nodemon index",
     "start": "NODE_ENV=production node index"
   },
   "keywords": [],
